fixing mobile spacing

--- a/client/src/styles/_mobile.scss
+++ b/client/src/styles/_mobile.scss
@@ -221,7 +221,7 @@
         padding-top: 20px;
         width: 90vw;
         min-width: 300px;
-        height: calc(100vh - 284px);
+        height: calc(100vh - 274px);
 
         #ni-bill-from {
           #street-address {
